--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- Custom Font -->
   <link href='https://fonts.googleapis.com/css?family=Lato|Lora|Ubuntu' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,700italic' rel='stylesheet' type='text/css'>
+  <!--<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,700italic' rel='stylesheet' type='text/css'>-->
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body layout="column"
